# launch-llama-cpp

./: .gitignore  DRAFT.md  Makefile  PROGRAM_FLOW.md  README.md  TASKS.md  config-example.yaml  config.yaml  curses_python_docs.md  favorites.yaml  launch-llama  launch-llama-default  pyproject.toml  requirements.txt  tui_example.py
config/: favorites.yaml
example-config-dir/: default.example.yaml  favorites.example.yaml
include/: config.yaml  default.yaml  favorites.yaml  llama-swap-config.yaml
launch_llama/: builder.py  cli.py  config.py  main.py  models.py  prompts.py  runner.py
src/: config_loader.cpp  config_loader.hpp  main.cpp  parser.cpp  parser.hpp
tests/: integration_test.cpp
